--- a/resources/config.json
+++ b/resources/config.json
@@ -1,30 +1,34 @@
 {
-  "chains": [
-    {
-      "name": "goatchain0",
-      "type": "ethereum",
-      "id": "100",
-      "endpoint": "http://192.168.1.110:8545",
-      "from": "0x222b8e2152E189f5282249877e039EF2c1c0C826",
-      "opts": {
-        "bridge": "0xb355b0b2c88d0333B77d2D641663AF7888DC26BD",
-        "erc20Handler": "0x8d47fb3c4e09D9CfF2109B460509Eb5477431067",
-        "minGasPrice": "1",
-        "http": "true"
-      }
-    },
-    {
-      "name": "goatchain1",
-      "type": "ethereum",
-      "id": "45",
-      "endpoint": "http://192.168.1.120:8545",
-      "from": "0x222b8e2152E189f5282249877e039EF2c1c0C826",
-      "opts": {
-        "bridge": "0xE13dF9D0E26920e2ad17319462E54087912232fE",
-        "erc20Handler": "0x5be7259A64e83458C953e0199B1b683e7D8F231e",
-        "minGasPrice": "1",
-        "http": "true"
-      }
-    }
-  ]
+    "chains": [
+        {
+            "name": "goatchain0",
+            "type": "ethereum",
+            "id": "100",
+            "endpoint": "http://192.168.1.110:8545",
+            "from": "0x222b8e2152E189f5282249877e039EF2c1c0C826",
+            "opts": {
+                "bridge": "0xcBd3a2204236b8F2938aF42306B4Ce1E74730426",
+                "erc20Handler": "0x561721f8F5f779954A746a0C9fd5945078927C07",
+                "erc721Handler": "",
+                "genericHandler": "",
+                "minGasPrice": "1",
+                "http": "true"
+            }
+        },
+        {
+            "name": "goatchain1",
+            "type": "ethereum",
+            "id": "45",
+            "endpoint": "http://192.168.1.120:8545",
+            "from": "0x222b8e2152E189f5282249877e039EF2c1c0C826",
+            "opts": {
+                "bridge": "0x33150ae50e7Ea6Ec3d3d5443828950F69C2FA7F6",
+                "erc20Handler": "0xa26962e672F742ABa5991cA97504Ca5415A56AAa",
+                "erc721Handler": "",
+                "genericHandler": "",
+                "minGasPrice": "1",
+                "http": "true"
+            }
+        }
+    ]
 }
